Added new ui . want to fix bugs

--- a/app/src/main/res/layout/fragment_completion_rate.xml
+++ b/app/src/main/res/layout/fragment_completion_rate.xml
@@ -21,7 +21,7 @@
             android:id="@+id/back_btn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@drawable/ic_left_arraow"
+            android:background="@drawable/arrowback"
             android:layout_marginStart="@dimen/_15sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -114,7 +114,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_12sdp"
                     android:layout_marginEnd="@dimen/_12sdp"
-                    android:background="@drawable/edit_text_background"
+                    android:background="@drawable/learn_more"
                     android:fontFamily="@font/inter_semibold"
                     android:gravity="center|start"
                     android:padding="@dimen/_12sdp"
@@ -281,7 +281,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_22sdp"
-                    android:background="@drawable/edit_text_background"
+                    android:background="@drawable/learn_more"
                     android:fontFamily="@font/inter_bold"
                     android:paddingVertical="@dimen/_12sdp"
                     android:text="@string/learn_more"
