--- a/app/src/main/res/layout/performance_item.xml
+++ b/app/src/main/res/layout/performance_item.xml
@@ -102,8 +102,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/_12sdp"
-            android:background="@drawable/border"
-            android:backgroundTint="@color/white_200"
+            android:background="@drawable/learn_more"
             android:fontFamily="@font/inter_semibold"
             android:paddingVertical="@dimen/_8sdp"
             android:text="@string/know_more"
