--- a/app/src/main/res/drawable/document_details.xml
+++ b/app/src/main/res/drawable/document_details.xml
@@ -3,9 +3,11 @@
 
     <corners android:radius="5dp"/>
 
-    <stroke android:width="1dp"
+    <stroke android:width="@dimen/_1sdp"
         android:color="#DDDDDD"/>
 
-    <solid android:color="#F1F1F1"/>
+     <solid
+      android:color="#F6F6F6"/>
+
 
 </shape>
