--- a/app/src/main/res/layout/fragment_aadhar_verification.xml
+++ b/app/src/main/res/layout/fragment_aadhar_verification.xml
@@ -83,37 +83,37 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/upload_aadhar"
                 android:layout_width="match_parent"
-                android:layout_height="130dp"
+                android:layout_height="120dp"
                 android:layout_marginHorizontal="@dimen/_15sdp"
                 android:layout_marginTop="@dimen/_12sdp"
                 android:background="@drawable/border"
-                android:backgroundTint="#FFF2ED"
                 app:layout_constraintEnd_toEndOf="@+id/aadhar_number"
                 app:layout_constraintStart_toStartOf="@+id/aadhar_number"
                 app:layout_constraintTop_toBottomOf="@id/aadhar_number">
 
-                <TextView
+
+                <ImageView
+                    android:id="@+id/img_adhverivication"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="25dp"
-                    android:layout_marginTop="21dp"
-                    android:fontFamily="@font/inter_semibold"
-                    android:text="@string/upload_aadhar_card"
-                    android:textSize="14sp"
+                    android:src="@drawable/adharverification_ic"
+                    android:layout_marginTop="@dimen/_19sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/upload_image"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_marginTop="90dp"
-                    android:layout_marginEnd="8dp"
-                    android:background="@drawable/border"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_camera"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Upload Pan Card"
+                    android:textAllCaps="false"
+                    android:textColor="#676767"
+                    android:textSize="14sp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    app:layout_constraintEnd_toEndOf="@+id/img_adhverivication"
+                    app:layout_constraintStart_toStartOf="@id/img_adhverivication"
+                    app:layout_constraintTop_toBottomOf="@+id/img_adhverivication" />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
