--- a/app/src/main/res/layout/fragment_cancellations_rate.xml
+++ b/app/src/main/res/layout/fragment_cancellations_rate.xml
@@ -21,7 +21,7 @@
             android:id="@+id/back_btn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@drawable/ic_left_arraow"
+            android:background="@drawable/arrowback"
             android:layout_marginStart="@dimen/_15sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
