--- a/app/src/main/res/layout/fragment_document_details.xml
+++ b/app/src/main/res/layout/fragment_document_details.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_15sdp"
-            android:background="@drawable/ic_left_arraow"
+            android:background="@drawable/arrowback"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -72,9 +72,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_marginHorizontal="@dimen/_15sdp"
-                android:background="@drawable/border"
-                android:backgroundTint="@color/white_100"
-                android:paddingHorizontal="@dimen/_15sdp"
+                android:background="@drawable/document_details"
+                 android:paddingHorizontal="@dimen/_15sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -106,9 +105,8 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_marginTop="@dimen/_9sdp"
-                android:background="@drawable/border"
-                android:backgroundTint="@color/white_100"
-                android:paddingHorizontal="@dimen/_15sdp"
+                android:background="@drawable/document_details"
+                 android:paddingHorizontal="@dimen/_15sdp"
                 app:layout_constraintEnd_toEndOf="@+id/view_rc"
                 app:layout_constraintStart_toStartOf="@+id/view_rc"
                 app:layout_constraintTop_toBottomOf="@id/view_rc">
@@ -141,9 +139,8 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_marginTop="@dimen/_9sdp"
-                android:background="@drawable/border"
-                android:backgroundTint="@color/white_100"
-                android:paddingHorizontal="@dimen/_15sdp"
+                android:background="@drawable/document_details"
+                 android:paddingHorizontal="@dimen/_15sdp"
                 app:layout_constraintEnd_toEndOf="@+id/view_dl"
                 app:layout_constraintStart_toStartOf="@+id/view_dl"
                 app:layout_constraintTop_toBottomOf="@id/view_dl">
@@ -176,9 +173,8 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_marginTop="@dimen/_9sdp"
-                android:background="@drawable/border"
-                android:backgroundTint="@color/white_100"
-                android:paddingHorizontal="@dimen/_15sdp"
+                android:background="@drawable/document_details"
+                  android:paddingHorizontal="@dimen/_15sdp"
                 app:layout_constraintEnd_toEndOf="@+id/view_adhar"
                 app:layout_constraintStart_toStartOf="@+id/view_adhar"
                 app:layout_constraintTop_toBottomOf="@id/view_adhar">
@@ -220,9 +216,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_17sdp"
-                android:background="@drawable/border"
-                android:backgroundTint="@color/white_100"
-                android:padding="@dimen/_15sdp"
+                  android:padding="@dimen/_15sdp"
+                android:background="@drawable/document_details"
                 app:layout_constraintEnd_toEndOf="@+id/view_pan"
                 app:layout_constraintStart_toStartOf="@+id/view_pan"
                 app:layout_constraintTop_toBottomOf="@id/view1">
@@ -256,9 +251,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_9sdp"
-                android:background="@drawable/border"
-                android:backgroundTint="@color/white_100"
-                android:padding="@dimen/_15sdp"
+                 android:padding="@dimen/_15sdp"
+                android:background="@drawable/document_details"
                 app:layout_constraintEnd_toEndOf="@+id/phone_number_layout"
                 app:layout_constraintStart_toStartOf="@+id/phone_number_layout"
                 app:layout_constraintTop_toBottomOf="@id/phone_number_layout">
@@ -292,9 +286,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_9sdp"
-                android:background="@drawable/border"
-                android:backgroundTint="@color/white_100"
-                android:padding="@dimen/_15sdp"
+                 android:padding="@dimen/_15sdp"
+                android:background="@drawable/document_details"
                 app:layout_constraintEnd_toEndOf="@+id/gender_layout"
                 app:layout_constraintStart_toStartOf="@+id/gender_layout"
                 app:layout_constraintTop_toBottomOf="@id/gender_layout">
@@ -336,9 +329,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_9sdp"
-                 android:background="@drawable/border"
-                android:backgroundTint="@color/white_100"
-                android:padding="@dimen/_15sdp"
+                 android:padding="@dimen/_15sdp"
+                android:background="@drawable/document_details"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/address"
                 app:layout_constraintStart_toStartOf="@+id/address"
