--- a/app/src/main/res/layout/fragment_driving_licence_verification.xml
+++ b/app/src/main/res/layout/fragment_driving_licence_verification.xml
@@ -92,7 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_15sdp"
-                    android:background="@drawable/ic_upload_licence"
+                    android:background="@drawable/group_33802"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -104,7 +104,7 @@
                     android:layout_marginTop="@dimen/_2sdp"
                     android:layout_marginBottom="@dimen/_15sdp"
                     android:fontFamily="@font/inter_semibold"
-                    android:text="Upload your License Photo"
+                    android:text="Upload front image"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
