--- a/app/src/main/res/layout/fragment_pan_verification.xml
+++ b/app/src/main/res/layout/fragment_pan_verification.xml
@@ -77,40 +77,43 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="@dimen/_12sdp"
                 android:background="@drawable/edit_text_background"
-                android:backgroundTint="@color/orange_200"
                 app:layout_constraintEnd_toEndOf="@+id/pan_number"
                 app:layout_constraintStart_toStartOf="@+id/pan_number"
                 app:layout_constraintTop_toBottomOf="@+id/pan_number">
 
-                <TextView
+
+
+                <ImageView
+                    android:id="@+id/img_pan_verivication"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="25dp"
-                    android:layout_marginTop="21dp"
-                    android:fontFamily="@font/inter_semibold"
-                    android:text="@string/upload_pan"
-                    android:textSize="14sp"
+                    android:src="@drawable/adharverification_ic"
+                    android:layout_marginTop="@dimen/_19sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/upload_img"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_marginTop="90dp"
-                    android:layout_marginEnd="8dp"
-                    android:background="@drawable/border"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_camera"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Upload Pan Card"
+                    android:textAllCaps="false"
+                    android:textColor="#676767"
+                    android:textSize="14sp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    app:layout_constraintEnd_toEndOf="@+id/img_pan_verivication"
+                    app:layout_constraintStart_toStartOf="@id/img_pan_verivication"
+                    app:layout_constraintTop_toBottomOf="@+id/img_pan_verivication" />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
 
-    <androidx.appcompat.widget.AppCompatButton
+
+        </androidx.core.widget.NestedScrollView>
+
+      <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/submit_btn"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_55sdp"
