--- a/app/src/main/res/layout/fragment_performance_details.xml
+++ b/app/src/main/res/layout/fragment_performance_details.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_15sdp"
-            android:background="@drawable/ic_left_arraow"
+            android:background="@drawable/arrowback"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
