--- a/app/src/main/res/layout/fragment_vehicle_details.xml
+++ b/app/src/main/res/layout/fragment_vehicle_details.xml
@@ -19,20 +19,65 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout_arrwback"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_9sdp"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+                <ImageView
+                    android:id="@+id/img_arrowback"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/arrowback"
+                    android:paddingVertical="@dimen/_8sdp"
+                    android:layout_marginStart="@dimen/_15sdp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+                <ImageView
+                    android:id="@+id/img_support"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_support"
+                    android:layout_marginEnd="@dimen/_40sdp"
+                    app:layout_constraintTop_toTopOf="@id/img_arrowback"
+                    app:layout_constraintBottom_toBottomOf="@id/img_arrowback"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Help"
+                    android:textSize="12sp"
+                    android:textColor="#0F6FB5"
+                    android:textAllCaps="false"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    app:layout_constraintTop_toTopOf="@id/img_support"
+                    app:layout_constraintBottom_toBottomOf="@id/img_support"
+                    app:layout_constraintStart_toEndOf="@id/img_support"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
             <TextView
                 android:id="@+id/vehicle_detail_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_15sdp"
-                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_marginTop="@dimen/_7sdp"
                 android:fontFamily="@font/inter_bold"
                 android:text="@string/vehicle_details"
                 android:textColor="@color/black"
                 android:textSize="32sp"
                 android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
+                app:layout_constraintTop_toBottomOf="@id/constraintLayout_arrwback"/>
             <ImageView
                 android:id="@+id/ic_scooter"
                 android:layout_width="wrap_content"
@@ -174,7 +219,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/upload_rc_layout"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_75sdp"
+                android:layout_height="@dimen/_95sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/dotted_border_box"
                 app:layout_constraintEnd_toEndOf="@+id/vehicle_number"
@@ -185,24 +230,22 @@
                     android:id="@+id/ic_upload_rc"
                     android:layout_width="38dp"
                     android:layout_height="50dp"
-                    android:layout_marginStart="34dp"
                     android:background="@drawable/ic_upload"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_20sdp"
                     android:fontFamily="@font/inter_semibold"
                     android:text="@string/upload_rc_image"
                     android:textColor="@color/white_500"
                     android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="@id/ic_upload_rc"
-                    app:layout_constraintStart_toEndOf="@+id/ic_upload_rc"
-                    app:layout_constraintTop_toTopOf="@id/ic_upload_rc"
-                    app:layout_constraintVertical_bias="0.433" />
+                    app:layout_constraintEnd_toEndOf="@+id/ic_upload_rc"
+                    app:layout_constraintStart_toStartOf="@+id/ic_upload_rc"
+                     app:layout_constraintTop_toBottomOf="@id/ic_upload_rc" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -233,7 +276,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/upload_bike_layout"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_75sdp"
+                android:layout_height="@dimen/_95sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/dotted_border_box"
                 app:layout_constraintEnd_toEndOf="@+id/upload_rc_layout"
@@ -244,24 +287,24 @@
                     android:id="@+id/ic_bike_upload"
                     android:layout_width="38dp"
                     android:layout_height="50dp"
-                    android:layout_marginStart="34dp"
                     android:background="@drawable/ic_upload"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_20sdp"
+                    android:layout_width="156dp"
+                    android:layout_height="21dp"
                     android:fontFamily="@font/inter_semibold"
                     android:text="@string/upload_bike_front_image"
                     android:textAlignment="center"
                     android:textColor="@color/white_500"
                     android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="@id/ic_bike_upload"
-                    app:layout_constraintStart_toEndOf="@+id/ic_bike_upload"
-                    app:layout_constraintTop_toTopOf="@id/ic_bike_upload" />
+                    app:layout_constraintEnd_toEndOf="@+id/ic_bike_upload"
+                    app:layout_constraintHorizontal_bias="0.508"
+                    app:layout_constraintStart_toStartOf="@+id/ic_bike_upload"
+                    app:layout_constraintTop_toBottomOf="@+id/ic_bike_upload" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
@@ -291,7 +334,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/bike_back_layout"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_75sdp"
+                android:layout_height="@dimen/_95sdp"
                 android:layout_marginHorizontal="25dp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/dotted_border_box"
@@ -301,24 +344,22 @@
                     android:id="@+id/ic_electric"
                     android:layout_width="38dp"
                     android:layout_height="50dp"
-                    android:layout_marginStart="34dp"
                     android:background="@drawable/ic_upload"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_20sdp"
                     android:fontFamily="@font/inter_semibold"
                     android:text="@string/upload_bike_back_image"
                     android:textColor="@color/white_500"
                     android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="@id/ic_electric"
-                    app:layout_constraintStart_toEndOf="@+id/ic_electric"
-                    app:layout_constraintTop_toTopOf="@id/ic_electric"
-                    app:layout_constraintVertical_bias="0.433" />
+                    app:layout_constraintEnd_toEndOf="@+id/ic_electric"
+                    app:layout_constraintStart_toStartOf="@+id/ic_electric"
+                    app:layout_constraintTop_toBottomOf="@+id/ic_electric" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -350,7 +391,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/electric_bike_layout"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_75sdp"
+                android:layout_height="@dimen/_95sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_20sdp"
                 android:background="@drawable/dotted_border_box"
@@ -363,23 +404,22 @@
                     android:id="@+id/ic_upload_bike"
                     android:layout_width="38dp"
                     android:layout_height="50dp"
-                    android:layout_marginStart="34dp"
                     android:background="@drawable/ic_upload"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_20sdp"
                     android:fontFamily="@font/inter_semibold"
                     android:text="@string/upload_ev_document_image"
                     android:textColor="@color/white_500"
                     android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="@id/ic_upload_bike"
-                    app:layout_constraintStart_toEndOf="@+id/ic_upload_bike"
-                    app:layout_constraintTop_toTopOf="@id/ic_upload_bike" />
+                    app:layout_constraintEnd_toEndOf="@+id/ic_upload_bike"
+                    app:layout_constraintStart_toStartOf="@+id/ic_upload_bike"
+                    app:layout_constraintTop_toBottomOf="@+id/ic_upload_bike" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
